[gd_scene load_steps=4 format=2]

[ext_resource path="res://Theme/theme.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/GameOver.gd" type="Script" id=2]
[ext_resource path="res://Sounds/sfx/select2.ogg" type="AudioStream" id=3]

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -272.0
margin_top = -180.0
margin_right = -93.0
margin_bottom = -140.0
rect_scale = Vector2( 3, 3 )

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 179.0
margin_bottom = 39.0
theme = ExtResource( 1 )
text = "Game over!"

[node name="Buttons" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -360.0
margin_top = -128.0
margin_right = -1.0
margin_bottom = -88.0
rect_scale = Vector2( 2, 2 )

[node name="Again" type="Button" parent="Buttons"]
margin_right = 68.0
margin_bottom = 40.0
focus_neighbour_left = NodePath("../Quit")
focus_neighbour_right = NodePath("../Quit")
text = "Try again"

[node name="Again2" type="Label" parent="Buttons"]
margin_left = 72.0
margin_top = 13.0
margin_right = 268.0
margin_bottom = 27.0
text = "                                                 "

[node name="Quit" type="Button" parent="Buttons"]
margin_left = 272.0
margin_right = 355.0
margin_bottom = 40.0
focus_neighbour_left = NodePath("../Again")
focus_neighbour_right = NodePath("../Again")
text = "Main Menu"

[node name="select" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="select2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
pitch_scale = 1.66

[connection signal="focus_entered" from="Buttons/Again" to="." method="_on_Again_focus_entered"]
[connection signal="pressed" from="Buttons/Again" to="." method="_on_Again_pressed"]
[connection signal="focus_entered" from="Buttons/Quit" to="." method="_on_Quit_focus_entered"]
[connection signal="pressed" from="Buttons/Quit" to="." method="_on_Quit_pressed"]
